imeplement logout flow
